worked on stuff in the park

--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body, html{
 }
 
 .container{
-background-image: url('/img/cak.jpeg');
+background-image: url('img/cak.jpeg');
 background-size: cover;
-height: 100%;
+width: 90vmin;
+height: 90vmin;
+margin:auto;
 }
 #rateDiv, #volDiv, #timeDiv{
     width: calc(100% / 3);
@@ -29,7 +31,7 @@ height: 100%;
 
 #player{
     width: 100%;
-    height: 12.5%;
+    height: 7.5%;
     position: fixed;
     right: 0;
     bottom: 0;
@@ -42,8 +44,8 @@ height: 100%;
 }
 
 #play-text, #pause-text, #stop-text{
-    line-height: 12.5vh;
-    font-size: 1.5em;
+    line-height: 10vh;
+    font-size: 1.2em;
 }
 
 #play-text:hover, #pause-text:hover, #stop-text:hover{
